--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -4,13 +4,13 @@
 .navBar {
     @include display-flex(column, center, center);
     @include position(sticky, 0, 0);
-    @include WL(none, 100vw);
+    @include WL(none, 100vw, auto);
     padding-bottom: 20px;
     background-color: color(white);
     z-index: z(d);
 
     .logo {
-        @include WL(none, 30%);
+        @include WL(none, 30%, 50%);
         background-color: color(white);
         margin: 0 auto;
         z-index: z(i);
