--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -152,7 +152,7 @@
         padding: 32px 16px;
         box-sizing: border-box;
         z-index: z(h);
-        transition: transform 0.4s cubic-bezier(1, 0.1, 0.8, -0.1) 0.1s;
+        transition: 0.4s;
 
         .logo-Side-Drawer {
             text-align: left;
