--- a/client/src/scss/userProfile.scss
+++ b/client/src/scss/userProfile.scss
@@ -207,47 +207,51 @@
 
             .deliveryInfoCard {
                 @include WL(min, 100%);
-                // border: 1px solid color(lighter-grey);
-                // border-radius: 5px;
+                min-height: 200px;
                 margin: 0.5rem 0;
                 padding: 0.5rem;
+                text-align: left;
 
-                .deliveryInfoCardDetail {
-                    display: grid;
-                    justify-content: stretch;
-                    grid-template-rows: repeat(4, 1fr);
+                .deliveryInfoCardDetailWrap {
+                    margin-bottom: 1.5rem;
 
-                    .name {
-                        font-weight: weight(bold);
-                        color: color(heavy-grey);
+                    .deliveryInfoCardDetail {
+                        display: grid;
+                        justify-content: stretch;
+                        grid-template-rows: repeat(4, 1fr);
+
+                        .name {
+                            font-weight: weight(bold);
+                            color: color(heavy-grey);
+                        }
+
+                        .phone {
+                            color: color(lighter-grey);
+                        }
+
+                        .address,
+                        .city {
+                            color: color(light-grey);
+                        }
+
+                        span {
+                            display: inline-block;
+                            width: 100%;
+                            text-align: left;
+                        }
                     }
+                    .operation {
+                        @include display-flex(row, space-between);
+                        @include WL(min, 20%);
+                        margin-top: 0.5rem;
 
-                    .phone {
-                        color: color(lighter-grey);
-                    }
+                        span {
+                            cursor: pointer;
+                            transition: 0.4s;
 
-                    .address,
-                    .city {
-                        color: color(light-grey);
-                    }
-
-                    span {
-                        display: inline-block;
-                        width: 100%;
-                        text-align: left;
-                    }
-                }
-                .operation {
-                    @include display-flex(row, space-between);
-                    @include WL(min, 20%);
-                    margin-top: 0.5rem;
-
-                    span {
-                        cursor: pointer;
-                        transition: 0.4s;
-
-                        &:hover {
-                            color: color(yellow);
+                            &:hover {
+                                color: color(yellow);
+                            }
                         }
                     }
                 }
