--- a/client/src/scss/userProfile.scss
+++ b/client/src/scss/userProfile.scss
@@ -193,6 +193,7 @@
         @include display-flex(row, space-around, flex-start);
         box-shadow: 3px 4px 11px -5px color(lighter-grey);
         margin-top: 2rem;
+        position: relative;
 
         .deliveryInfoCardContainer {
             @include display-flex(column, space-around, flex-start);
@@ -343,6 +344,20 @@
             }
         }
     }
+
+    .deliveryInfoSectionClose {
+        cursor: pointer;
+        transition: 0.4s;
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        font-size: size(m);
+
+        &:hover {
+            color: color(yellow);
+        }
+    }
+
     button {
         @include button;
         margin-top: 2rem;
