--- a/client/src/scss/shoppingBag.scss
+++ b/client/src/scss/shoppingBag.scss
@@ -2,22 +2,17 @@
 @import 'mixins';
 
 .ShoppingBagContainer {
-    @include WL(max, 83%);
+    @include WL(max, 80%);
     @include display-flex(column, flex-start, center);
     min-height: 50vh;
     margin: 2em auto;
 
     .ShoppingBagHeader {
-        @include WL(max, 85%);
+        @include WL(max, 100%);
         @include display-flex(row, space-between, center);
         margin-bottom: 0.5rem;
-        padding: 0.5rem;
         border-bottom: 1px solid color(lighter-grey);
 
-        h4 {
-            color: color(heavy-grey);
-            font-weight: weight(bold);
-        }
         span {
             cursor: pointer;
             transition: 0.5s;
@@ -29,7 +24,7 @@
     }
 
     .checkOutItemWrap {
-        @include WL(max, 90%);
+        @include WL(max, 100%);
         min-height: 25vh;
         padding: 2rem;
 
@@ -64,7 +59,7 @@
     }
 
     .checkOutSummary {
-        @include WL(max, 85%);
+        @include WL(max, 100%);
         @include display-flex(row, space-between);
         padding: 0.6rem;
         background-color: color(lighter-grey);
@@ -86,7 +81,7 @@
     }
 
     .checkOut {
-        @include WL(min, 85%);
+        @include WL(min, 100%);
         @include display-flex(row, flex-end);
         margin-top: 2rem;
         a,
@@ -122,7 +117,7 @@
 
 @include response(m) {
     .ShoppingBagContainer {
-        @include WL(max, 95%);
+        @include WL(max, 90%);
         min-height: 62vh;
         margin: 1.9em auto;
 
@@ -150,7 +145,7 @@
 
 @include response(s) {
     .ShoppingBagContainer {
-        @include WL(max, 100%);
+        @include WL(max, 90%);
         min-height: 60vh;
 
         .ShoppingBagHeader {
@@ -160,13 +155,15 @@
         }
 
         .checkOutItemWrap {
-            padding: 0.5rem 1.5rem;
+            padding: 0;
 
             .checkOutItem {
                 grid-template-columns: 65% 25% 10%;
                 grid-template-rows: repeat(2, 1fr);
                 font-size: size(xxs);
                 border-bottom: 1px solid color(lighter-grey);
+                align-items: center;
+                min-height: 4rem;
 
                 span:first-child {
                     text-align: left;
@@ -174,6 +171,7 @@
 
                 .productPurchaseController {
                     grid-column: 2 / 3;
+                    margin: 0;
 
                     .operator {
                         cursor: pointer;
