--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -7,7 +7,7 @@ $color: (
     fade-white: rgba(255, 255, 255, 0.85),
     transparent-grey: #2a2c305d,
     yellow: #ccc012,
-    light-yellow: #dfd87a,
+    light-yellow: #f0e787,
     red: rgba(211, 25, 71, 0.952),
 );
 
