--- a/client/src/scss/products.scss
+++ b/client/src/scss/products.scss
@@ -26,6 +26,18 @@
         color: color(heavy-grey);
     }
 
+    .single-item-box {
+        @include display-flex(column, center, center);
+        @include WL(max, 100%, 100%);
+        position: relative;
+        cursor: pointer;
+        margin: 0.5em 0;
+
+        .single-item-box-line {
+            margin-top: 0.8rem;
+        }
+    }
+
     .single-item {
         @include display-flex(column, center, center);
         @include WL(max, 100%, 100%);
