--- a/client/src/scss/_mixins.scss
+++ b/client/src/scss/_mixins.scss
@@ -94,3 +94,119 @@
     min-height: inherit;
     margin: 0 auto;
 }
+
+@mixin userProfileCard {
+    @include display-flex(column, space-around, flex-start);
+    flex-basis: 30%;
+    min-height: 40vh;
+    border-radius: 5px;
+
+    figure {
+        @include WL(max, 100%, 200px);
+        margin: 1rem 0;
+
+        img {
+            @include WL(max, 300px, 200px);
+            object-fit: cover;
+        }
+    }
+    .userName {
+        width: 100%;
+        border-bottom: 1px solid color(lighter-grey);
+
+        h3 {
+            text-align: center;
+        }
+    }
+
+    .link {
+        @include display-flex(column, center, flex-start);
+        @include WL(max, 100%, auto);
+        padding: 1rem;
+
+        a {
+            text-decoration: none;
+            color: color(heavy-grey);
+            transition: 0.4s;
+
+            &:hover {
+                color: color(yellow);
+            }
+        }
+
+        a.active {
+            color: color(yellow);
+        }
+    }
+}
+
+@mixin inputForm {
+    & .inputBody {
+        @include WL(max, 90%, 70px);
+        display: block;
+        position: relative;
+
+        & input {
+            @include WL(max, 100%, 100%);
+            color: color(light-grey);
+            padding-top: 20px;
+            border: none;
+            outline: none;
+        }
+
+        & label {
+            color: color(heavy-grey);
+            position: absolute;
+            bottom: 0px;
+            left: 0%;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            border-bottom: 1px solid color(light-grey);
+        }
+
+        & label::after {
+            content: '';
+            position: absolute;
+            bottom: -1px;
+            left: 0;
+            height: 100%;
+            width: 0%;
+            border-bottom: 3px solid color(yellow);
+            transition: all 0.3s ease;
+        }
+
+        .errorMSG {
+            position: absolute;
+            color: color(heavy-grey);
+            font-size: size(xs);
+            bottom: 5px;
+            right: 0;
+        }
+
+        .contentName {
+            position: absolute;
+            bottom: 5px;
+            left: 0;
+            transition: all 0.3s ease;
+        }
+        & input:not(:placeholder-shown) + .labelName .contentName,
+        & input:focus + .labelName .contentName {
+            transform: translateY(-150%);
+            font-size: 14px;
+            color: color(yellow);
+        }
+
+        & input:not(:placeholder-shown) + .labelName::after,
+        & input:focus + .labelName::after {
+            width: 100%;
+        }
+        input.invalid + label::after {
+            border-bottom: 3px solid color(red);
+        }
+
+        input.invalid + .labelName .contentName {
+            color: color(red);
+        }
+    }
+}
